hphp/test/quick/record-alias-return-error.php.expectf
Catchable fatal error: Value returned from function myfunc() must be of type Baz, Foo given in %s/record-alias-return-error.php on line 14
